Updates in app.py

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,8 @@
              <li><a href="/highest_covid_cases"> Highest covid cases state</a></li>
             <li><a href="/least_covid_cases"> Least covid cases state</a></li>
             <li><a href="/total_cases"> Total Covid cases</a></li>
+            <li><a href="getcsv">Store data in csv file </a></li>
+            <li><a href="/download-data-file">Download data file</a></li>
         </ul>
     </div>
 
